cmake_minimum_required(VERSION 3.29.6)

project(aoc12_2024)

add_executable(aoc12_2024
        src-cpp/inputData.h
        #src-cpp/day1.cpp
        #src-cpp/day2.cpp
        #src-cpp/day3.cpp
        #src-cpp/day4.cpp
        #src-cpp/day5.cpp
        #src-cpp/day6.cpp
        #src-cpp/day7.cpp
        #src-cpp/day8.cpp
        #src-cpp/day9.cpp
        #src-cpp/day10.cpp
        #src-cpp/day11.cpp
        src-cpp/day12.cpp
        #src-cpp/day13.cpp
        #src-cpp/day14.cpp
        #src-cpp/day15.cpp
        #src-cpp/day16.cpp
        #src-cpp/day17.cpp
        #src-cpp/day18.cpp
        #src-cpp/day19.cpp
        #src-cpp/day20.cpp
        #src-cpp/day21.cpp
        #src-cpp/day22.cpp
        #src-cpp/day23.cpp
        #src-cpp/day24.cpp
        #src-cpp/day25.cpp
)